Fix QuickPost with "ad at bottom"
In multi-page topics with this ad setting, QuickPost would appear above
the page jumper/board nav, which is weird. Moving it out to be a direct
child of #content fixes this, but the padding is different so it's no
longer aligned with the message list - adding the col_layout class is
sort of hackish but seems like a robust fix.

--- a/content/css/gamefox-ads.css
+++ b/content/css/gamefox-ads.css
@@ -20,6 +20,9 @@
         margin: 0 !important;
         padding: 0 !important;
     }
+    #top_col_wrap .pod.board_wrap {
+        margin-bottom: 0 !important;
+    }
 }
 
 @-moz-document url-prefix(http://www.gamefaqs.com/boards/post.php) {
